[gd_scene load_steps=8 format=2]

[ext_resource path="res://Font/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/planetSprite.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Math Planet/MathPlanet.gd" type="Script" id=3]
[ext_resource path="res://images/GameUI/answerBox.png" type="Texture" id=4]
[ext_resource path="res://images/Planets/addition.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=2]
size = 90
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 150
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="MathPlanet" type="Control"]
anchor_right = 0.156
anchor_bottom = 0.278
margin_right = 0.47998
margin_bottom = -0.240021
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 209, 161 )
texture = ExtResource( 5 )
script = ExtResource( 2 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -79.0
margin_top = -36.0
margin_right = 428.0
margin_bottom = 404.0

[node name="StageUFO" type="Control" parent="TextureButton"]
margin_left = 153.0
margin_top = 70.0
margin_right = 193.0
margin_bottom = 110.0

[node name="Node2D" type="Node2D" parent="TextureButton/StageUFO"]
position = Vector2( 185, 44 )

[node name="TextureRect2" type="TextureRect" parent="TextureButton/StageUFO/Node2D"]
margin_right = 134.0
margin_bottom = 145.0
texture = ExtResource( 4 )
expand = true

[node name="ShipLabel" type="Label" parent="TextureButton/StageUFO/Node2D"]
unique_name_in_owner = true
anchor_left = 0.825
anchor_top = 1.24
anchor_right = 0.825
anchor_bottom = 1.24
margin_left = 16.0
margin_top = -1.0
margin_right = 120.0
margin_bottom = 154.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 2 )
text = "20"
align = 1
valign = 1

[node name="PlanetLabel" type="Label" parent="TextureButton/StageUFO"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 14.0
margin_top = 12.0
margin_right = 158.0
margin_bottom = 189.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.756863 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_as_outline = 0
custom_fonts/font = SubResource( 1 )
text = "+"
align = 1
valign = 1

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
